--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "adv_basics",
-    "short_name": "adv_basics",
+    "name": "evaluations_poc",
+    "short_name": "evaluations_poc",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
